updated mobile overflow issue

--- a/style.scss
+++ b/style.scss
@@ -26,6 +26,9 @@ body {
   font-weight: 400;
   line-height: 1.6;
   color: $darkerGray;
+}
+
+.body-wrapper {
   overflow-x: hidden;
 }
 
@@ -314,7 +317,7 @@ footer {
         padding-top: 3rem;
         z-index: 2;
       }
-      
+
     }
   }
 }
